# musicum

./: .gitignore  CLAUDE.md  README.md  TASKS.md  musicum.code-workspace  package-lock.json
apps/audio-processor/: Cargo.toml  project.json
apps/audio-processor/src/: lib.rs
apps/backend/: .gitignore  README.md  project.json  pyproject.toml
apps/backend/src/backend/: config.py  database.py  main.py  seed.py  utils.py
apps/backend/src/backend/models/: __init__.py  collection.py  track.py  user.py
apps/backend/src/backend/routers/: __init__.py  auth.py  collections.py  tracks.py  users.py
apps/backend/src/backend/schemas/: __init__.py  collection.py  track.py  user.py
apps/backend/src/backend/services/: __init__.py  attachment_service.py  audio_processor.py  auth_service.py  collection_service.py  media_processor.py  track_service.py  user_service.py
apps/backend/tests/: conftest.py  test_auth.py  test_auth_integration.py  test_collections.py  test_main.py  test_media_processor.py  test_seed.py  test_track_processing.py  test_track_stream.py  test_tracks.py  test_users.py
apps/frontend/: eslint.config.js  package-lock.json  package.json  project.json  tsconfig.json  vite.config.ts
apps/frontend/src/lib/api/: auth.ts  client.ts  collections.ts  index.ts  tracks.ts  users.ts
apps/frontend/src/lib/components/: AttachmentItem.svelte  AttachmentManager.svelte  CollectionCard.svelte  CollectionTrackItem.svelte  CollectionTrackManager.svelte  Header.svelte  SearchDropdown.svelte  Sidebar.svelte  TagFilter.svelte  TrackCard.svelte  TrackPicker.svelte  TrackRow.svelte  UserDropdown.svelte
apps/frontend/src/lib/stores/: auth.svelte.ts
apps/frontend/src/lib/styles/: globals.css
apps/frontend/src/lib/types/: auth.ts  collection.ts  common.ts  index.ts  track.ts
apps/frontend/src/routes/: +layout.svelte  +page.svelte
apps/frontend/src/routes/(auth)/: +layout.svelte
apps/frontend/src/routes/collections/: +page.svelte
apps/frontend/src/routes/create_collection/: +page.svelte
apps/frontend/src/routes/create_track/: +page.svelte
apps/frontend/src/routes/tracks/: +page.svelte
apps/frontend/src/routes/users/: +page.svelte
(+16 files in other folders)
