[package]
name = "audio-processor"
version = "0.1.0"
edition = "2021"
description = "Audio processing library compiled to WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "AudioContext",
    "AudioWorkletNode",
    "AudioBuffer",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
