[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Musicum backend API"
authors = []
readme = "README.md"
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.0"
pydantic-settings = "^2.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.0,<5.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
email-validator = "^2.0.0"
python-multipart = "^0.0.22"
python-slugify = "^8.0.0"
pydub = "^0.25.1"
Pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
